2014-07-05  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (pos_visible_p): If CHARPOS is at beginning of window,
	and there is a display property at that position, don't call
	move_it_to to move to a position before window start.  (Bug#17942)
	Fix condition for finding CHARPOS by the first call to move_it_to.
	(Bug#17944)

2014-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (find_defun_start): Try the cache even
	if !open_paren_in_column_0_is_defun_start.
	(back_comment): If find_defun_start was pessimistic, use the
	scan_sexps_forward result to improve the cache (bug#16526).

2014-07-04  Daniel Colascione  <dancol@dancol.org>

	Backport from trunk.
	* xfns.c (create_frame_xic): Pass XNStatusAttributes to XCreateIC
	only if xic_style calls for it.  This change allows Emacs to work
	with ibus.  Also, don't leak resources if create_frame_xic fails,
	and stop caching xic_style across different displays (Bug#17928).
	(supported_xim_styles): Make const.
	(best_xim_style): Remove first parameter: it's always just
	supported_xim_styles.  Change to look at supported_xim_styles directly.

2014-07-04  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (redisplay_window): If redisplay of a window ends up
	with point in a partially visible line at end of the window, make
	sure the amended position of point actually has smaller Y
	coordinate; if not, give up and scroll the display.  (Bug#17905)

	* window.c (window_scroll_pixel_based): When point ends up at the
	last fully visible line, don't let move_it_to stop at the left
	edge of the line and dupe us into thinking point is inside the
	scroll margin.

	* w32.c (network_interface_info): Make sure the argument is a
	Lisp string.

2014-07-01  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (prepare_desired_row): Accept 2 additional arguments:
	the window whose glyph row is being prepared and a flag whether it
	is for mode/header line.  Make sure the glyph row's marginal areas
	are in sync with what the window wants.
	(Bug#17892)
